--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "echarts": "^5.5.0",
+    "marked": "^12.0.2",
     "next": "14.2.3",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/marked": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
