Using worker and WASM module as npm modules

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
-    "echarts": "^5.5.0",
+    "casper-litmus-wasm": "^0.1.0",
+    "casper-litmus-worker": "^0.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
