--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "copyfiles -u 2 node_modules/casper-litmus-worker/dist/* public/"
+    "postinstall": "cp -R node_modules/casper-litmus-worker/dist/* public/"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -28,7 +28,6 @@
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "copyfiles": "^2.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "marked": "^13.0.2",
